[gd_scene load_steps=22 format=2]

[ext_resource path="res://Buildings/2StoreySmall.png" type="Texture" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/EarthquakeMF.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://homescreen.ogg" type="AudioStream" id=4]
[ext_resource path="res://Buildings/house1.png" type="Texture" id=5]
[ext_resource path="res://Fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ICONS/exit.png" type="Texture" id=7]
[ext_resource path="res://Start.gd" type="Script" id=8]
[ext_resource path="res://UI/Popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Tutorial.tscn" type="PackedScene" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.465116, 0.751938, 1 )
colors = PoolColorArray( 0.596078, 0.396078, 0.396078, 1, 0.478431, 0.764706, 0.67451, 1, 0.376471, 0.411765, 0.756863, 1, 0.764706, 0.615686, 0.313726, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 1, -10, 0 )
gravity = Vector3( 0, 50, 0 )
initial_velocity = 244.19
angular_velocity = 16.74
angular_velocity_random = 0.35
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 9.3
scale = 6.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.745098, 0.6, 0.6, 1, 0.537255, 0.796078, 0.631373, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 555, 1, 1 )
flag_disable_z = true
direction = Vector3( 1, -3, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
angular_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 59.14
color_ramp = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 150
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=11]
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.329412, 0.737255, 0.792157, 1 ), Color( 0.329412, 0.792157, 0.490196, 1 ), Color( 0.666667, 0.521569, 0.694118, 1 ), Color( 0.694118, 0.647059, 0.521569, 1 ), Color( 0.301961, 0.690196, 0.792157, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect/2StoreySmall:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 199.523, 300 ), Vector2( 202.523, 384.029 ), Vector2( 199.523, 384.029 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect/2StoreySmall2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 543.244, 372.016 ), Vector2( 543.244, 445.016 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/ColorRect/2StoreySmall2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -8.7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/ColorRect/2StoreySmall3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 872.282, 492.819 ), Vector2( 873.696, 382.51 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.264862
margin_right = 0.264893
rect_pivot_offset = Vector2( 1374.95, 151.909 )
color = Color( 0.329412, 0.737255, 0.792157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D2" type="Particles2D" parent="CanvasLayer/ColorRect"]
position = Vector2( 395.929, 597.793 )
amount = 16
lifetime = 10.0
explosiveness = 0.42
randomness = 0.36
process_material = SubResource( 3 )
texture = ExtResource( 5 )

[node name="2StoreySmall" type="Sprite" parent="CanvasLayer/ColorRect"]
modulate = Color( 0.603922, 0.788235, 0.807843, 1 )
position = Vector2( 199.523, 300 )
rotation = 0.0872665
scale = Vector2( 10.8236, 8.26862 )
texture = ExtResource( 1 )

[node name="2StoreySmall2" type="Sprite" parent="CanvasLayer/ColorRect"]
modulate = Color( 0.713726, 0.8, 0.639216, 1 )
position = Vector2( 543.244, 372.016 )
scale = Vector2( 10.8236, 8.26862 )
texture = ExtResource( 1 )

[node name="2StoreySmall3" type="Sprite" parent="CanvasLayer/ColorRect"]
modulate = Color( 0.823529, 0.686275, 0.803922, 1 )
position = Vector2( 872.282, 492.819 )
scale = Vector2( 10.8236, 8.26862 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="CanvasLayer"]
position = Vector2( 465.077, 622.834 )
amount = 50
process_material = SubResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -170.0
margin_bottom = 167.0
custom_constants/separation = -26
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 190.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.313726, 0.313726, 1 )
text = "QUAKE"
align = 1

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 164.0
margin_right = 1024.0
margin_bottom = 231.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.768627, 0.682353, 0.345098, 1 )
text = "A growing disaster"
align = 1

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 205.0
margin_right = 1024.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.811765, 0.0901961, 0.478431, 1 )
text = "by Nodeg"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -194.0
margin_bottom = -75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 119.0
theme = ExtResource( 2 )
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer2/HBoxContainer"]
margin_left = 389.0
margin_right = 531.0
margin_bottom = 119.0
theme = ExtResource( 2 )

[node name="PlayButton" type="Button" parent="CanvasLayer/VBoxContainer2/HBoxContainer/CenterContainer"]
margin_right = 142.0
margin_bottom = 119.0
theme = ExtResource( 2 )
text = "PLAY"

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer2/HBoxContainer"]
margin_left = 535.0
margin_right = 635.0
margin_bottom = 119.0

[node name="InstructionsButton" type="Button" parent="CanvasLayer/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 10 )
text = "Instructions"

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer2/HBoxContainer/HBoxContainer"]
margin_top = 56.0
margin_right = 100.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 10 )
text = "Settings"

[node name="Popup" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Tutorial" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "anim"
anims/anim = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/HBoxContainer/CenterContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/HBoxContainer/HBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/HBoxContainer/HBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
